crate/sinex-primitives/tests/source_contract_compile_fail/missing_checkpoint_family.stderr
error[E0599]: no method named `build` found for struct `SourceRuntimeBindingBuilder<HasOutput, HasPrivacy, MissingCheckpointFamily, HasRuntimeShape, HasBuildImpact>` in the current scope
  --> tests/source_contract_compile_fail/missing_checkpoint_family.rs:18:6
   |
 8 |       let _ = SourceRuntimeBinding::builder(
   |  _____________-
 9 | |         subject_ref!("runtime_unit:test.missing_checkpoint_family"),
10 | |         "test.missing_checkpoint_family",
11 | |         "test",
...  |
17 | |     .build_impact(SourceBuildImpact::ZERO)
18 | |     .build();
   | |     -^^^^^ method not found in `SourceRuntimeBindingBuilder<HasOutput, HasPrivacy, MissingCheckpointFamily, HasRuntimeShape, HasBuildImpact>`
   | |_____|
   |
   |
   = note: the method was found for `SourceRuntimeBindingBuilder<HasOutput, HasPrivacy, HasCheckpointFamily, HasRuntimeShape, HasBuildImpact>`
